--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -22,6 +22,8 @@
     <color name="primaryColor">#6200EE</color>
     <color name="gray">#757575</color>
     <color name="errorColor">#D32F2F</color>
+    <color name="resume_green">#388E3C</color>
+
 
 
 
