--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Base.Theme.SmileJobPortal" parent="Theme.Material3.DayNight.NoActionBar">
+    <style name="Base.Theme.SmileJobPortal" parent="Theme.MaterialComponents.DayNight.NoActionBar">
 <!--        <item name="android:windowSplashScreenBackground" tools:targetApi="31">@android:color/white</item>-->
 <!--        <item name="android:windowSplashScreenAnimatedIcon">@drawable/splash_screen</item>-->
 <!--        <item name="android:windowSplashScreenIconBackgroundColor">@null</item>-->
