--- a/app/src/main/res/layout/activity_explore.xml
+++ b/app/src/main/res/layout/activity_explore.xml
@@ -58,14 +58,15 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
                 android:gravity="center"
-                android:layout_marginTop="32dp"
+                android:layout_marginTop="64dp"
                 android:layout_marginBottom="16dp"
                 android:visibility="gone">
 
                 <ImageView
                     android:id="@+id/imgNoJobs"
-                    android:layout_width="160dp"
-                    android:layout_height="160dp"
+                    android:layout_width="200dp"
+                    android:layout_height="200dp"
+                    android:layout_marginTop="64dp"
                     android:src="@drawable/no_jobs"
                     android:contentDescription="No Jobs Illustration"
                     android:layout_marginBottom="16dp" />
@@ -76,7 +77,7 @@
                     android:layout_height="wrap_content"
                     android:text="No jobs available"
                     android:textSize="18sp"
-                    android:textStyle="bold"
+                    android:textStyle="italic"
                     android:textColor="@android:color/darker_gray"
                     android:gravity="center" />
             </LinearLayout>
